# engine-ops

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  COMPREHENSIVE_IMPROVEMENT_ROADMAP.md  CONTRIBUTING.md  DAY2_AUDIT.md  Dockerfile  EXTENSION_SETUP.md  GOVERNANCE.md  HOW_IT_WORKS.md  LICENSE  MANIFESTO.md  PHASE_1_FOUNDATION_PLAN.md  QUICK_TEST.md  README.md  ROADMAP.md  SECURITY.md  SITREP_council_consultation.md  STRUCTURE.md  TROUBLESHOOTING.md  USER_GUIDE.md  check_chroma.py  compose.debug.yaml  compose.yaml  dashboard.py  dashboard_debate.py  demo.py  demo_audit_report.json  docker-compose.ops.yml  docker-compose.yml  hummbl.code-workspace  jest.config.js  jest.setup.js  lima.yaml  package-lock.json  package.json  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  context_gap.md  feature_request.md
.github/workflows/: README.md  blue-green-deploy.yml  ci.yml  code-format.yml  codeql.yml  dependency-submission.yml  docs-link-check.yml  production.yml  python-test.yml  python-vuln-scan.yml  release.yml  rolling-deploy.yml  type-check.yml
agentic_workflow/: QUICKSTART.md  README.md  __init__.py  agent_base.py  context.py  debate.py  enforcer.py  federated_memory.py  instructions.py  memory.py  monitoring.py  policy.py  reasoning.py  telemetry.py  utils.py  workflow.py
agentic_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentic_workflow/agents/: __init__.py  architect_agent.py  audit_agent.py  detection_agent.py  resolution_agent.py  triage_agent.py
agentic_workflow/tests/: __init__.py  test_agents.py  test_context.py  test_enforcer.py  test_instructions.py  test_llm_agents.py  test_memory.py  test_reasoning.py  test_workflow.py
agentic_workflow/tools/: file_io.py
analytics/: cost-dashboard.html  dashboard.css  dashboard.html  dashboard.js
chroma_db/: chroma.sqlite3
config/: constitution.yaml  sovereign_constitution.yaml
core/: .gitkeep  README.md  agent-session-manager.ts  engine.ts  example.ts  index.ts  interfaces.ts
core/__tests__/: agent-session-manager.test.ts  analytics.test.ts  engine-multicloud.test.ts  engine.test.ts
core/ai/: client.ts
core/algorithms/: bin-packing.ts  genetic.ts  least-loaded.ts  simulated-annealing.ts
core/analytics/: cost-calculator.ts  index.ts  recommendations.ts  reporting.ts
core/anomaly/: analysis.ts  detector.ts  llm-provider.ts
core/caching/: lru-cache.ts
core/migrations/: migration-manager.ts
core/monitoring/: health-tracker.ts  logger.ts  metrics.ts  prometheus.ts
core/observability/: metrics.ts
core/plugins/: base-plugin.ts  index.ts  interfaces.ts  ml-plugin.ts  registry.ts  workload-collector.ts
core/providers/: aws-provider.ts  azure-provider.ts  edge-provider.ts  gcp-provider.ts  index.ts  interfaces.ts  resource-manager.ts
core/resilience/: circuit-breaker.ts  retry.ts
core/tools/: log-summarizer.ts
cortex/: memory.db  memory.db-shm  memory.db-wal  target_dummy.py
cortex/workflows/: build_game.yaml  demo_batch_clients.yaml  demo_governance.yaml  demo_orchestration.yaml  demo_snake_game.yaml  sovereign_auditor.yaml  terminal_snake.yaml
cortex/workspace/: game.py  simple_snake.py  snake_game.py  terminal_snake.py  test_manual.txt
coverage/: clover.xml  coverage-final.json  lcov.info
dashboard/: README.md  package.json
docs/: .gitkeep  AGENT_SESSIONS.md  ARCHITECTURE.md  CI_ERROR_REPORT.md  COUNCIL_EXPANSION_PLAN.md  DIALECTIC.md  Dictionary_of_Cognitive_Sovereignty.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KILL_SHEET.md  KUBECONFIG_DISCOVERY_REPORT.md  KUBERNETES.md  LATTICE_MIGRATION_COMPLETE.md  LATTICE_ROBUSTNESS_ANALYSIS.md  LAUNCH_COPY.md  LOADER_IMPLEMENTATION_COMPLETE.md  ML_PLUGIN_GUIDE.md  MULTI-CLOUD.md  OUTSTANDING_ITEMS_PLAN.md  OUTSTANDING_STATUS.md  PHASE1_COMPLETE.md  PROBLEMS_REVIEW_2025-01-27.md  PRODUCTION_DEPLOYMENT.md  README.md  RELATIONSHIPS_POPULATED.md  ROLLING_DEPLOY_ASSESSMENT.md  SCHEMA_ANALYSIS.md  SCHEMA_COMPLIANCE.md  SCHEMA_INTEGRATION_SUMMARY.md  SECURITY_FEATURES.md  SECURITY_UPDATES.md  SITREP.md  STRATEGIC_COMPARISON.md  SovereignOps.md  The_Adversarial_Defense.md  The_Sovereign_Scaffold.md  UX_SPEC.md  context-engineering.md  deployment-summary.md  (+5 more)
engine/: Dockerfile  __init__.py  audit.py  core.py  gateway.py  guardrails.py  memory.py  providers.py  requirements.txt  tools.py  workflow.py
examples/: adversarial_demo.py  agent-session-example.ts  architect_demo.py  compliance_demo.py  debate_demo.py  federated_memory_benchmark.py  integration-manifest-example.json  memory_demo.py  no-code-workflow-template.yaml  onboarding-wizard-template.tsx  reasoning_benchmark.py  semantic_guardrails_demo.py  sovereignops_verification.py
extension/: Dockerfile  HOW_TO_USE.md  esbuild.js  package-lock.json  package.json  tsconfig.json
infra/: .gitkeep  Dockerfile  README.md  docker-compose.yml  prometheus.yml
k8s-operator/: controller.ts  optimizer.ts  reconciler.ts  watcher.ts
public/: .gitkeep  api.ts  app.ts  server.ts
schemas/: .gitkeep  agent-session.ts  detailed-schemas.ts  validation.ts
scripts/: README.md  demo_screencast.sh  deploy.sh  docker-via-lima.sh  prepare-github-secrets.sh  setup_colima.sh
templates/: README.md
tests/: locustfile.py  verify_db.sh
tools/: apply-license-headers.sh  manage-prs.sh  summarize-logs.ts  verify-algo.ts  verify-core.ts  verify-credentials.ts  verify-scheduling.ts
(+284 files in other folders)
